sshme-in/apps/homepage/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: keycloak-oidc-route
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
  hostnames:
    - keycloak.sshme.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 80
